template for Hero project

--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script defer src="./js/script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Heros and Villains</title>
+    <title>My Heroes and Villains</title>
 </head>
 <body>
-    
+    <form>
+        <h1>My Heroes and Villains</h1>
+        <input type="text" placeholder="Search for Here">
+        <input type="submit" value="Search now!">
+    </form>
+
+    <h2 class="characterName">Super Hero Name</h2>
+
+    <main>
+        <img id="characterImg">
+        <h2>Powers and Attributes:</h2>
+
+        <div>
+            <h2>Biography</h2>
+            <h2>Association and other info</h2>
+            <h2></h2>
+        </div>
+    </main>
 </body>
 </html>
