--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
         <input type="submit" value="Search now!">
     </form>
 
-    <h2 class="characterName">Super Hero Name</h2>
+    <h2 id="characterName">Super Hero Name</h2>
 
     <main>
         <img id="characterImg">
-        <h2>Powers and Attributes:</h2>
+        <h2 id="powers">Powers and Attributes:</h2>
 
         <div>
-            <h2>Biography</h2>
-            <h2>Association and other info</h2>
-            <h2></h2>
+            <h2 id="characterBio">Biography</h2>
+            <h2 id="characterOtherInfo">Association and other info</h2>
         </div>
     </main>
 </body>
