restart of project

--- a/index.html
+++ b/index.html
@@ -7,25 +7,21 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script defer src="./js/script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
-    <title>My Heroes and Villains</title>
+    <title>My Pokemon</title>
 </head>
 <body>
     <form>
-        <h1>My Heroes and Villains</h1>
+        <h1>My Pokemon</h1>
+        <p>Welcome to My Pokemon! Here you'll be able to find out a bit more about your favorite pokemon. Just Search the name of your favorite pokemon below and click search for more info!</p>
         <input type="text" placeholder="Search for Here">
-        <input type="submit" value="Search now!">
+        <button>Click me!</button>
     </form>
 
-    <h2 id="characterName">Super Hero Name</h2>
+    <h2 id="characterName"></h2>
+    <p></p>
 
     <main>
-        <img id="characterImg">
-        <h2 id="powers">Powers and Attributes:</h2>
 
-        <div>
-            <h2 id="characterBio">Biography</h2>
-            <h2 id="characterOtherInfo">Association and other info</h2>
-        </div>
     </main>
 </body>
 </html>
