--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <form>
         <h1>My Pokemon</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrqORKxOjrAFpts111SIwOY5CF4ixbU_qG4A&usqp=CAU">
         <p>Welcome to My Pokemon! Here you'll be able to find out a bit more about your favorite pokemon. Just Search the name of your favorite pokemon below and click search for more info!</p>
         <input type="text" placeholder="Search for Here">
         <button>Click me!</button>
